--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -28,3 +28,5 @@ jobs:
       - name: Publish to NPM
         run: |
           bash ./bin/publish-npm
+        env:
+          NPM_TOKEN: ${{ secrets.VAL_TOWN_NPM_TOKEN || secrets.NPM_TOKEN }}
